syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/loadable.proto";
import "stremio/core/types/addon.proto";
import "stremio/core/types/meta_item_preview.proto";
import "stremio/core/deep_links/deep_links.proto";

message CatalogsWithExtra {
  optional Selected selected = 1;
  repeated Catalog catalogs = 2;

  message Selected {
    optional string type = 1;
    repeated stremio.core.types.ExtraValue extra = 2;
  }
}

message Catalog {
  repeated LoadablePage pages = 2;
}

message LoadablePage {
  required string title = 1;
  required stremio.core.types.ResourceRequest request = 2;
  oneof content {
    Loading loading = 3;
    Error error = 4;
    Page ready = 5;
  }
  required stremio.core.deep_links.DiscoverDeepLinks deep_links = 6;
}

message Page {
  repeated stremio.core.types.MetaItemPreview meta_items = 1;
}
